--- a/IB_ComputerScience_IA/main.kv
+++ b/IB_ComputerScience_IA/main.kv
@@ -959,24 +959,24 @@ ScreenManager:
     #                icon_right: "eye-off"
                     required: False
 
-                MDTextField:
+                MDTextFieldRound:
                     id:paid_amount_input
-                    hint_text: "If invoice is paid, input paid amount. Else, LEAVE ALL BLUE INPUTS BELOW BLANK:"
-                    fill_color: 0, 0, 0, .4 #will change to color blue later
+                    hint_text: "If invoice is paid, input paid amount HERE. Else, LEAVE ALL ORANGE INPUTS BELOW BLANK:"
+                    normal_color: "5191b8"
     #                icon_right: "eye-off"
                     required: False
 
-                MDTextField:
+                MDTextFieldRound:
                     id:payment_date1_input
                     hint_text: "And input payment date (Format YYYY-MM-DD)"
-                    fill_color: 0, 0, 0, .4 #will change to color blue later
+                    normal_color: "5191b8"
     #                icon_right: "eye-off"
                     required: False
 
-                MDTextField:
+                MDTextFieldRound:
                     id:payment_date2_input
                     hint_text: "If the invoices is paid 2 times (Format YYYY-MM-DD)"
-                    fill_color: 0, 0, 0, .4 #will change to color blue later
+                    normal_color: "5191b8"
     #                icon_right: "eye-off"
                     required: False
 
