--- a/IB_ComputerScience_IA/main.kv
+++ b/IB_ComputerScience_IA/main.kv
@@ -657,8 +657,8 @@ ScreenManager:
                     required: False
 
                 MDTextField:
-                    id:supplier_name_input
-                    hint_text: "Supplier name"
+                    id:trading_partner_name_input
+                    hint_text: "Trading partner name"
     #                icon_right: "eye-off"
                     required: False
 
